# egui_tracing

./: Cargo.toml
examples/: eframe.rs
src/: layer.rs  lib.rs  time.rs  ui.rs
src/tracing/: event.rs  mod.rs
src/ui/: mod.rs  state.rs
