[package]
name = "egui_tracing"
description = "Integrates tracing and logging with egui for event collection/visualization"
version = "0.2.1"
authors = ["Grievouz <tammo@ronke.dev>"]
edition = "2021"
license = "Unlicense"
repository = "https://github.com/grievouz/egui_tracing"
keywords = ["egui", "tracing", "log"]
categories = ["gui", "game-development"]

[features]
default = ["log"]
log = ["tracing-log", "tracing-subscriber/tracing-log"]

[dependencies]
crossbeam-queue = "0.3"
egui = "0.22"
egui_extras = "0.22"
globset = { version = "0.4", features = ["serde1"] }
hashbrown = "0.14"
ringbuffer = "0.15"
serde = { version = "1", default-features = false, features = ["derive"] }
tracing = { version = "0.1", default-features = false }
tracing-log = { version = "0.1", optional = true, default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "registry",
] }

[dev-dependencies]
eframe = "0.22"

[patch.crates-io]
egui = { git = "https://github.com/daxpedda/egui", branch = "despair" }
egui_extras = { git = "https://github.com/daxpedda/egui", branch = "despair" }
